build: added missing package

--- a/index.html
+++ b/index.html
@@ -512,7 +512,10 @@
                                 >
                             </div>
                             <div class="col-md-3 d-grid">
-                                <a href="https://github.com/tsparticles/react/tree/legacy" target="_blank" class="btn btn-info m-1"
+                                <a
+                                    href="https://github.com/tsparticles/react/tree/legacy"
+                                    target="_blank"
+                                    class="btn btn-info m-1"
                                     ><i class="fab fa-react fa-fw"></i> React</a
                                 >
                             </div>
