build: updated homepage, removed polya font

--- a/index.html
+++ b/index.html
@@ -288,66 +288,97 @@
                     </nav>
                 </header>
                 <div class="col" style="background: rgba(0, 0, 0, 0); border-radius: 20px">
-                    <div class="row mb-4">
+                    <div class="row mb-4 mt-5">
                         <div class="col text-center">
-                            <h1 style="font-family: Polya; font-size: 6vmin; white-space: nowrap">
-                                ts <span style="font-size: 3em">P</span><span style="font-size: 2em">articles</span>
+                            <h1
+                                class="d-none d-md-block"
+                                style="font-size: 10vmin; white-space: nowrap; font-weight: bold"
+                            >
+                                tsParticles
                             </h1>
-                            <a
-                                class="github-button"
-                                href="https://github.com/matteobruni/tsparticles/subscription"
-                                data-icon="octicon-eye"
-                                data-size="large"
-                                data-show-count="true"
-                                aria-label="Watch matteobruni/tsparticles on GitHub"
-                                >Watch</a
-                            >
-                            <a
-                                class="github-button"
-                                href="https://github.com/matteobruni/tsparticles"
-                                data-icon="octicon-star"
-                                data-size="large"
-                                data-show-count="true"
-                                aria-label="Star matteobruni/tsparticles on GitHub"
-                                >Star</a
-                            >
-                            <a
-                                class="github-button"
-                                href="https://github.com/matteobruni/tsparticles/fork"
-                                data-icon="octicon-repo-forked"
-                                data-size="large"
-                                data-show-count="true"
-                                aria-label="Fork matteobruni/tsparticles on GitHub"
-                                >Fork</a
-                            >
-                            <a
-                                class="twitter-share-button"
-                                data-size="large"
-                                href="https://twitter.com/intent/tweet?text=tsParticles%20-%20A%20lightweight%20TypeScript%20library%20for%20creating%20particles&amp;url=https://particles.js.org&amp;hashtags=typescript,particles,html5,webdesign&amp;via=HollowMatt_ITA"
-                            >
-                                Tweet
-                            </a>
-                            <div
-                                class="fb-share-button"
-                                data-href="https://particles.js.org"
-                                data-layout="button"
-                                data-size="large"
-                            >
-                                <a
-                                    target="_blank"
-                                    href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fparticles.js.org%2F&amp;src=sdkpreparse"
-                                    class="fb-xfbml-parse-ignore"
-                                >
-                                    Share
-                                </a>
+                        </div>
+                    </div>
+                    <div class="row mb-4">
+                        <div class="col-lg-3 col-md-4 order-md-1 order-2 mt-md-3">
+                            <script
+                                async
+                                type="text/javascript"
+                                src="//cdn.carbonads.com/carbon.js?serve=CEAI6KJL&placement=particlesjsorg"
+                                id="_carbonads_js"
+                            ></script>
+                        </div>
+                        <div class="col-lg-6 col-md-4 text-center order-md-2 order-1">
+                            <div class="row">
+                                <div class="col">
+                                    <a
+                                        class="github-button"
+                                        href="https://github.com/matteobruni/tsparticles/subscription"
+                                        data-icon="octicon-eye"
+                                        data-size="large"
+                                        data-show-count="true"
+                                        aria-label="Watch matteobruni/tsparticles on GitHub"
+                                        >Watch</a
+                                    >
+                                    <a
+                                        class="github-button"
+                                        href="https://github.com/matteobruni/tsparticles"
+                                        data-icon="octicon-star"
+                                        data-size="large"
+                                        data-show-count="true"
+                                        aria-label="Star matteobruni/tsparticles on GitHub"
+                                        >Star</a
+                                    >
+                                    <a
+                                        class="github-button"
+                                        href="https://github.com/matteobruni/tsparticles/fork"
+                                        data-icon="octicon-repo-forked"
+                                        data-size="large"
+                                        data-show-count="true"
+                                        aria-label="Fork matteobruni/tsparticles on GitHub"
+                                        >Fork</a
+                                    >
+                                    <a
+                                        class="github-button"
+                                        href="https://github.com/sponsors/matteobruni"
+                                        data-icon="octicon-heart"
+                                        data-size="large"
+                                        aria-label="Sponsor @matteobruni on GitHub"
+                                        >Sponsor</a
+                                    >
+                                </div>
+                                <div class="row">
+                                    <div class="col">
+                                        <a
+                                            class="twitter-share-button"
+                                            data-size="large"
+                                            href="https://twitter.com/intent/tweet?text=tsParticles%20-%20A%20lightweight%20TypeScript%20library%20for%20creating%20particles&amp;url=https://particles.js.org&amp;hashtags=typescript,particles,html5,webdesign&amp;via=HollowMatt_ITA"
+                                        >
+                                            Tweet
+                                        </a>
+                                        <a
+                                            href="https://twitter.com/tsParticles?ref_src=twsrc%5Etfw"
+                                            class="twitter-follow-button"
+                                            data-size="large"
+                                            data-show-count="false"
+                                            >Follow @tsParticles</a
+                                        >
+                                        <div
+                                            class="fb-share-button"
+                                            data-href="https://particles.js.org"
+                                            data-layout="button"
+                                            data-size="large"
+                                        >
+                                            <a
+                                                target="_blank"
+                                                href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fparticles.js.org%2F&amp;src=sdkpreparse"
+                                                class="fb-xfbml-parse-ignore"
+                                            >
+                                                Share
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <a
-                                href="https://twitter.com/tsParticles?ref_src=twsrc%5Etfw"
-                                class="twitter-follow-button"
-                                data-show-count="false"
-                                >Follow @tsParticles</a
-                            >
-                            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
                     </div>
                     <div class="row">
@@ -436,16 +467,6 @@
                                 target="_blank"
                                 ><i class="fas fa-plus-circle fa-fw"></i> Create New</a
                             >
-                        </div>
-                    </div>
-                    <div class="row mb-4">
-                        <div class="col text-center">
-                            <script
-                                async
-                                type="text/javascript"
-                                src="//cdn.carbonads.com/carbon.js?serve=CEAI6KJL&placement=particlesjsorg"
-                                id="_carbonads_js"
-                            ></script>
                         </div>
                     </div>
                     <div class="row">
@@ -745,6 +766,7 @@
             })(document, "script", "twitter-wjs");
         </script>
         <div id="fb-root"></div>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <script
             async
             defer
