build: improved homepage

--- a/index.html
+++ b/index.html
@@ -287,17 +287,11 @@
                         </div>
                     </nav>
                 </header>
-                <div class="col" style="background: rgba(0, 0, 0, 0); border-radius: 20px">
-                    <div class="row mb-4 mt-5">
-                        <div class="col text-center">
-                            <h1
-                                class="d-none d-md-block"
-                                style="font-size: 10vmin; white-space: nowrap; font-weight: bold"
-                            >
-                                tsParticles
-                            </h1>
-                        </div>
-                    </div>
+                <div
+                    class="col-8 col-md-12 offset-2 offset-md-0"
+                    style="background: rgba(0, 0, 0, 0); border-radius: 20px"
+                >
+                    <div class="d-md-none d-block mt-5">&nbsp;</div>
                     <div class="row mb-4">
                         <div class="col-lg-3 col-md-4 order-md-1 order-2 mt-md-3">
                             <script
@@ -308,6 +302,16 @@
                             ></script>
                         </div>
                         <div class="col-lg-6 col-md-4 text-center order-md-2 order-1">
+                            <div class="row mb-4">
+                                <div class="col text-center">
+                                    <h1
+                                        class="d-none d-md-block"
+                                        style="font-size: 10vmin; white-space: nowrap; font-weight: bold"
+                                    >
+                                        tsParticles
+                                    </h1>
+                                </div>
+                            </div>
                             <div class="row">
                                 <div class="col">
                                     <a
