--- a/samples/presets/confetti.html
+++ b/samples/presets/confetti.html
@@ -151,6 +151,7 @@
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-engine@2.8.0/tsparticles.engine.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-move-base@2.8.0/tsparticles.move.base.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-emitters@2.8.0/tsparticles.plugin.emitters.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-motion@2.8.0/tsparticles.plugin.motion.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-circle@2.8.0/tsparticles.shape.circle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-square@2.8.0/tsparticles.shape.square.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-angle@2.8.0/tsparticles.updater.angle.min.js"></script>
