--- a/samples/presets/fireworks.html
+++ b/samples/presets/fireworks.html
@@ -148,6 +148,7 @@
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-engine@2.8.0/tsparticles.engine.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-move-base@2.8.0/tsparticles.move.base.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-emitters@2.8.0/tsparticles.plugin.emitters.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-sounds@2.8.0/tsparticles.plugin.sounds.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-circle@2.8.0/tsparticles.shape.circle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-line@2.8.0/tsparticles.shape.line.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-angle@2.8.0/tsparticles.updater.angle.min.js"></script>
