--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                         >
                                         <a
                                             class="dropdown-item"
-                                            href="https://github.com/tsparticles/angular/tree/legacy"
+                                            href="https://github.com/tsparticles/angular"
                                             target="_blank"
                                             ><i class="fab fa-angular fa-fw"></i> Angular</a
                                         >
@@ -530,7 +530,7 @@
                         <div class="row mb-2">
                             <div class="col-md-3 d-grid">
                                 <a
-                                    href="https://github.com/tsparticles/angular/tree/legacy"
+                                    href="https://github.com/tsparticles/angular"
                                     target="_blank"
                                     class="btn btn-danger m-1"
                                     ><i class="fab fa-angular fa-fw"></i> Angular</a
