build: removed legacy links

--- a/index.html
+++ b/index.html
@@ -205,67 +205,67 @@
                                         >
                                         <a
                                             class="dropdown-item"
-                                            href="https://github.com/tsparticles/react/tree/legacy"
+                                            href="https://github.com/tsparticles/react"
                                             target="_blank"
                                             ><i class="fab fa-react fa-fw"></i> React</a
                                         >
                                         <a
                                             class="dropdown-item"
-                                            href="https://github.com/tsparticles/vue2/tree/legacy"
+                                            href="https://github.com/tsparticles/vue2"
                                             target="_blank"
                                             ><i class="fab fa-vuejs fa-fw"></i> Vue 2.x</a
                                         >
                                         <a
                                             class="dropdown-item"
-                                            href="https://github.com/tsparticles/vue3/tree/legacy"
+                                            href="https://github.com/tsparticles/vue3"
                                             target="_blank"
                                             ><i class="fab fa-vuejs fa-fw"></i> Vue 3.x</a
                                         >
                                         <a
                                             class="dropdown-item"
-                                            href="https://github.com/tsparticles/ember/tree/legacy"
+                                            href="https://github.com/tsparticles/ember"
                                             target="_blank"
                                             >Ember.js</a
                                         >
                                         <a
                                             class="dropdown-item"
-                                            href="https://github.com/tsparticles/inferno/tree/legacy"
+                                            href="https://github.com/tsparticles/inferno"
                                             target="_blank"
                                             >Inferno</a
                                         >
                                         <a
                                             class="dropdown-item"
-                                            href="https://github.com/tsparticles/jquery/tree/legacy"
+                                            href="https://github.com/tsparticles/jquery"
                                             target="_blank"
                                             >jQuery</a
                                         >
                                         <a
                                             class="dropdown-item"
-                                            href="https://github.com/tsparticles/preact/tree/legacy"
+                                            href="https://github.com/tsparticles/preact"
                                             target="_blank"
                                             >Preact</a
                                         >
                                         <a
                                             class="dropdown-item"
-                                            href="https://github.com/tsparticles/riot/tree/legacy"
+                                            href="https://github.com/tsparticles/riot"
                                             target="_blank"
                                             >Riot.js</a
                                         >
                                         <a
                                             class="dropdown-item"
-                                            href="https://github.com/tsparticles/solid/tree/legacy"
+                                            href="https://github.com/tsparticles/solid"
                                             target="_blank"
                                             >Solid.js</a
                                         >
                                         <a
                                             class="dropdown-item"
-                                            href="https://github.com/tsparticles/svelte/tree/legacy"
+                                            href="https://github.com/tsparticles/svelte"
                                             target="_blank"
                                             >Svelte</a
                                         >
                                         <a
                                             class="dropdown-item"
-                                            href="https://github.com/tsparticles/webcomponents/tree/legacy"
+                                            href="https://github.com/tsparticles/webcomponents"
                                             target="_blank"
                                             >Web Components</a
                                         >
@@ -538,7 +538,7 @@
                             </div>
                             <div class="col-md-3 d-grid">
                                 <a
-                                    href="https://github.com/tsparticles/react/tree/legacy"
+                                    href="https://github.com/tsparticles/react"
                                     target="_blank"
                                     class="btn btn-info m-1"
                                     ><i class="fab fa-react fa-fw"></i> React</a
@@ -546,7 +546,7 @@
                             </div>
                             <div class="col-md-3 d-grid">
                                 <a
-                                    href="https://github.com/tsparticles/vue2/tree/legacy"
+                                    href="https://github.com/tsparticles/vue2"
                                     target="_blank"
                                     class="btn btn-success m-1"
                                     ><i class="fab fa-vuejs fa-fw"></i> Vue 2.x</a
@@ -554,7 +554,7 @@
                             </div>
                             <div class="col-md-3 d-grid">
                                 <a
-                                    href="https://github.com/tsparticles/vue3/tree/legacy"
+                                    href="https://github.com/tsparticles/vue3"
                                     target="_blank"
                                     class="btn btn-success m-1"
                                     ><i class="fab fa-vuejs fa-fw"></i> Vue 3.x</a
@@ -564,7 +564,7 @@
                         <div class="row">
                             <div class="col-md-6 col-lg-3 d-grid">
                                 <a
-                                    href="https://github.com/tsparticles/ember/tree/legacy"
+                                    href="https://github.com/tsparticles/ember"
                                     target="_blank"
                                     class="btn btn-sm btn-light m-1"
                                     >Ember.js</a
@@ -572,7 +572,7 @@
                             </div>
                             <div class="col-md-6 col-lg-3 d-grid">
                                 <a
-                                    href="https://github.com/tsparticles/inferno/tree/legacy"
+                                    href="https://github.com/tsparticles/inferno"
                                     target="_blank"
                                     class="btn btn-sm btn-light m-1"
                                     >Inferno</a
@@ -580,7 +580,7 @@
                             </div>
                             <div class="col-md-6 col-lg-3 d-grid">
                                 <a
-                                    href="https://github.com/tsparticles/jquery/tree/legacy"
+                                    href="https://github.com/tsparticles/jquery"
                                     target="_blank"
                                     class="btn btn-sm btn-light m-1"
                                     >jQuery</a
@@ -588,7 +588,7 @@
                             </div>
                             <div class="col-md-6 col-lg-3 d-grid">
                                 <a
-                                    href="https://github.com/tsparticles/preact/tree/legacy"
+                                    href="https://github.com/tsparticles/preact"
                                     target="_blank"
                                     class="btn btn-sm btn-light m-1"
                                     >Preact</a
@@ -596,7 +596,7 @@
                             </div>
                             <div class="col-md-6 col-lg-3 d-grid">
                                 <a
-                                    href="https://github.com/tsparticles/riot/tree/legacy"
+                                    href="https://github.com/tsparticles/riot"
                                     target="_blank"
                                     class="btn btn-sm btn-light m-1"
                                     >Riot.js</a
@@ -604,7 +604,7 @@
                             </div>
                             <div class="col-md-6 col-lg-3 d-grid">
                                 <a
-                                    href="https://github.com/tsparticles/solid/tree/legacy"
+                                    href="https://github.com/tsparticles/solid"
                                     target="_blank"
                                     class="btn btn-sm btn-light m-1"
                                     >Solid.js</a
@@ -612,7 +612,7 @@
                             </div>
                             <div class="col-md-6 col-lg-3 d-grid">
                                 <a
-                                    href="https://github.com/tsparticles/svelte/tree/legacy"
+                                    href="https://github.com/tsparticles/svelte"
                                     target="_blank"
                                     class="btn btn-sm btn-light m-1"
                                     >Svelte</a
@@ -620,7 +620,7 @@
                             </div>
                             <div class="col-md-6 col-lg-3 d-grid">
                                 <a
-                                    href="https://github.com/tsparticles/webcomponents/tree/legacy"
+                                    href="https://github.com/tsparticles/webcomponents"
                                     target="_blank"
                                     class="btn btn-sm btn-light m-1"
                                     >Web Components</a
