build: added astro link

--- a/index.html
+++ b/index.html
@@ -223,6 +223,12 @@
                                         >
                                         <a
                                             class="dropdown-item"
+                                            href="https://github.com/tsparticles/astro"
+                                            target="_blank"
+                                            >Astro</a
+                                        >
+                                        <a
+                                            class="dropdown-item"
                                             href="https://github.com/tsparticles/ember"
                                             target="_blank"
                                             >Ember.js</a
@@ -537,10 +543,7 @@
                                 >
                             </div>
                             <div class="col-md-3 d-grid">
-                                <a
-                                    href="https://github.com/tsparticles/react"
-                                    target="_blank"
-                                    class="btn btn-info m-1"
+                                <a href="https://github.com/tsparticles/react" target="_blank" class="btn btn-info m-1"
                                     ><i class="fab fa-react fa-fw"></i> React</a
                                 >
                             </div>
@@ -562,6 +565,14 @@
                             </div>
                         </div>
                         <div class="row">
+                            <div class="col-md-6 col-lg-3 d-grid">
+                                <a
+                                    href="https://github.com/tsparticles/ember"
+                                    target="_blank"
+                                    class="btn btn-sm btn-light m-1"
+                                    >Astro</a
+                                >
+                            </div>
                             <div class="col-md-6 col-lg-3 d-grid">
                                 <a
                                     href="https://github.com/tsparticles/ember"
