--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                         <div class="row">
                             <div class="col-md-6 col-lg-3 d-grid">
                                 <a
-                                    href="https://github.com/tsparticles/ember"
+                                    href="https://github.com/tsparticles/astro"
                                     target="_blank"
                                     class="btn btn-sm btn-light m-1"
                                     >Astro</a
