build: fixed website

--- a/samples/presets/fireworks.html
+++ b/samples/presets/fireworks.html
@@ -151,12 +151,12 @@
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-sounds@2.11.0/tsparticles.plugin.sounds.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-circle@2.11.0/tsparticles.shape.circle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-line@2.11.0/tsparticles.shape.line.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-angle@2.11.0/tsparticles.updater.angle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-color@2.11.0/tsparticles.updater.color.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-destroy@2.11.0/tsparticles.updater.destroy.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-life@2.11.0/tsparticles.updater.life.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-opacity@2.11.0/tsparticles.updater.opacity.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-out-modes@2.11.0/tsparticles.updater.out-modes.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-rotate@2.11.0/tsparticles.updater.rotate.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-size@2.11.0/tsparticles.updater.size.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-stroke-color@2.11.0/tsparticles.updater.stroke-color.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-preset-fireworks@2.11.0/tsparticles.preset.fireworks.min.js"></script>
