--- a/index.html
+++ b/index.html
@@ -724,12 +724,12 @@
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-square@2.11.0/tsparticles.shape.square.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-star@2.11.0/tsparticles.shape.star.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-text@2.11.0/tsparticles.shape.text.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-angle@2.11.0/tsparticles.updater.angle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-color@2.11.0/tsparticles.updater.color.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-destroy@2.11.0/tsparticles.updater.destroy.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-life@2.11.0/tsparticles.updater.life.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-opacity@2.11.0/tsparticles.updater.opacity.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-out-modes@2.11.0/tsparticles.updater.out-modes.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-rotate@2.11.0/tsparticles.updater.rotate.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-size@2.11.0/tsparticles.updater.size.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-stroke-color@2.11.0/tsparticles.updater.stroke-color.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-slim@2.11.0/tsparticles.slim.min.js"></script>
