--- a/samples/presets/confetti.html
+++ b/samples/presets/confetti.html
@@ -154,12 +154,12 @@
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-motion@2.11.0/tsparticles.plugin.motion.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-circle@2.11.0/tsparticles.shape.circle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-square@2.11.0/tsparticles.shape.square.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-angle@2.11.0/tsparticles.updater.angle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-color@2.11.0/tsparticles.updater.color.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-life@2.11.0/tsparticles.updater.life.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-opacity@2.11.0/tsparticles.updater.opacity.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-out-modes@2.11.0/tsparticles.updater.out-modes.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-roll@2.11.0/tsparticles.updater.roll.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-rotate@2.11.0/tsparticles.updater.rotate.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-size@2.11.0/tsparticles.updater.size.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-tilt@2.11.0/tsparticles.updater.tilt.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-wobble@2.11.0/tsparticles.updater.wobble.min.js"></script>
