build: fixed website export

--- a/index.html
+++ b/index.html
@@ -744,6 +744,7 @@
         <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.11.0/tsparticles.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-canvas-mask@2.11.0/tsparticles.plugin.canvas-mask.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-infection@2.11.0/tsparticles.plugin.infection.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-export-json@2.11.0/tsparticles.plugin.export.json.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-hsv-color@2.11.0/tsparticles.plugin.hsvColor.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-light@2.11.0/tsparticles.interaction.light.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-particles-repulse@2.11.0/tsparticles.interaction.particles.repulse.min.js"></script>
