build: fixed website export

--- a/index.html
+++ b/index.html
@@ -814,6 +814,7 @@
                 await loadMultilineTextShape(tsParticles);
                 await loadRoundedRectShape(tsParticles);
                 await loadSpiralShape(tsParticles);
+                await loadExportJSONPlugin(tsParticles);
 
                 const configsUrl = "/configs";
                 const configs = [
