fix: fixed exports in demos page, closes #14

--- a/samples/index.html
+++ b/samples/index.html
@@ -343,6 +343,7 @@
                                     <a class="dropdown-item" target="_blank" href="/docs">API Documentation</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" id="nav-export-image" href="#">Export Image</a>
+                                    <a class="dropdown-item" id="nav-export-video" href="#">Export Video</a>
                                     <a class="dropdown-item" id="nav-export-config" href="#">Export Config</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" id="nav-toggle-stats" href="#">Toggle Stats</a>
@@ -571,6 +572,7 @@
                                         <a class="dropdown-item" target="_blank" href="/docs">API Documentation</a>
                                         <div class="dropdown-divider"></div>
                                         <a class="dropdown-item" id="export-image" href="#">Export Image</a>
+                                        <a class="dropdown-item" id="export-video" href="#">Export Video</a>
                                         <a class="dropdown-item" id="export-config" href="#">Export Config</a>
                                         <div class="dropdown-divider"></div>
                                         <a class="dropdown-item" id="toggle-stats" href="#">Toggle Stats</a>
@@ -808,6 +810,9 @@
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-easing-quart@2.11.0/tsparticles.plugin.easing.quart.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-easing-quint@2.11.0/tsparticles.plugin.easing.quint.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-easing-sine@2.11.0/tsparticles.plugin.easing.sine.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-export-json@2.11.0/tsparticles.plugin.export.json.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-export-image@2.11.0/tsparticles.plugin.export.image.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-export-video@2.11.0/tsparticles.plugin.export.video.min.js"></script>
 
         <script src="../js/demo.min.js"></script>
     </body>
