build: updated to 2.12.0

--- a/samples/presets/hyperspace.html
+++ b/samples/presets/hyperspace.html
@@ -34,7 +34,7 @@
         />
         <meta property="og:image" content="https://particles.js.org/images/demo2.png" />
         <title>
-            tsParticles | Firefly Preset | JavaScript Particles, Confetti and Fireworks animations for your website
+            tsParticles | Hyperspace Preset | JavaScript Particles, Confetti and Fireworks animations for your website
         </title>
         <link rel="stylesheet" href="/css/presets.min.css" />
         <style>
@@ -147,20 +147,20 @@
         ></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-engine@2.12.0/tsparticles.engine.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-basic@2.12.0/tsparticles.basic.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-trail@2.12.0/tsparticles.interaction.external.trail.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-move-base@2.12.0/tsparticles.move.base.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-emitters@2.12.0/tsparticles.plugin.emitters.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-circle@2.12.0/tsparticles.shape.circle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-color@2.12.0/tsparticles.updater.color.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-life@2.12.0/tsparticles.updater.life.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-opacity@2.12.0/tsparticles.updater.opacity.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-out-modes@2.12.0/tsparticles.updater.out-modes.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-size@2.12.0/tsparticles.updater.size.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-preset-firefly@2.12.0/tsparticles.preset.firefly.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-preset-hyperspace@2.12.0/tsparticles.preset.hyperspace.min.js"></script>
         <script type="text/javascript">
             (async () => {
-                await loadFireflyPreset(tsParticles);
+                await loadHyperspacePreset(tsParticles);
 
-                await tsParticles.load("tsparticles", { preset: "firefly" });
+                await tsParticles.load("tsparticles", { preset: "hyperspace" });
             })();
         </script>
     </body>
