--- a/samples/presets/index.html
+++ b/samples/presets/index.html
@@ -215,6 +215,18 @@
                 </div>
                 <div class="col-4 mt-3 mb-3">
                     <div class="card text-white bg-dark">
+                        <img class="card-img-top" src="/images/presets/hyperspace.png" alt="Fountain" />
+                        <div class="card-body">
+                            <h5 class="card-title">Hyperspace</h5>
+                            <p class="card-text">Hyperspace preset demo</p>
+                        </div>
+                        <div class="card-footer text-right">
+                            <a class="btn btn-primary" href="hyperspace.html" target="_blank">See demo</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 mt-3 mb-3">
+                    <div class="card text-white bg-dark">
                         <img class="card-img-top" src="/images/presets/links.png" alt="Links" />
                         <div class="card-body">
                             <h5 class="card-title">Links</h5>
