--- a/404.html
+++ b/404.html
@@ -169,46 +169,50 @@
             integrity="sha256-NP9NujdEzS5m4ZxvNqkcbxyHB0dTRy9hG13RwTVBGwo="
             crossorigin="anonymous"
         ></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-engine@2.11.0/tsparticles.engine.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-attract@2.11.0/tsparticles.interaction.external.attract.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-bounce@2.11.0/tsparticles.interaction.external.bounce.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-bubble@2.11.0/tsparticles.interaction.external.bubble.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-connect@2.11.0/tsparticles.interaction.external.connect.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-grab@2.11.0/tsparticles.interaction.external.grab.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-pause@2.11.0/tsparticles.interaction.external.pause.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-push@2.11.0/tsparticles.interaction.external.push.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-remove@2.11.0/tsparticles.interaction.external.remove.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-repulse@2.11.0/tsparticles.interaction.external.repulse.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-particles-attract@2.11.0/tsparticles.interaction.particles.attract.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-particles-collisions@2.11.0/tsparticles.interaction.particles.collisions.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-particles-links@2.11.0/tsparticles.interaction.particles.links.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-move-base@2.11.0/tsparticles.move.base.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-move-parallax@2.11.0/tsparticles.move.parallax.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-particles.js@2.11.0/tsparticles.pjs.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-circle@2.11.0/tsparticles.shape.circle.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-image@2.11.0/tsparticles.shape.image.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-line@2.11.0/tsparticles.shape.line.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-polygon@2.11.0/tsparticles.shape.polygon.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-square@2.11.0/tsparticles.shape.square.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-star@2.11.0/tsparticles.shape.star.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-text@2.11.0/tsparticles.shape.text.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-color@2.11.0/tsparticles.updater.color.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-life@2.11.0/tsparticles.updater.life.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-opacity@2.11.0/tsparticles.updater.opacity.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-out-modes@2.11.0/tsparticles.updater.out-modes.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-rotate@2.11.0/tsparticles.updater.rotate.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-size@2.11.0/tsparticles.updater.size.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-stroke-color@2.11.0/tsparticles.updater.stroke-color.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-slim@2.11.0/tsparticles.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-trail@2.11.0/tsparticles.interaction.external.trail.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-absorbers@2.11.0/tsparticles.plugin.absorbers.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-emitters@2.11.0/tsparticles.plugin.emitters.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-polygon-mask@2.11.0/tsparticles.plugin.polygon-mask.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-roll@2.11.0/tsparticles.updater.roll.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-tilt@2.11.0/tsparticles.updater.tilt.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-twinkle@2.11.0/tsparticles.updater.twinkle.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-wobble@2.11.0/tsparticles.updater.wobble.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.11.0/tsparticles.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-engine@2.12.0/tsparticles.engine.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-move-base@2.12.0/tsparticles.move.base.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-easing-quad@2.12.0/tsparticles.plugin.easing.quad.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-circle@2.12.0/tsparticles.shape.circle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-color@2.12.0/tsparticles.updater.color.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-opacity@2.12.0/tsparticles.updater.opacity.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-out-modes@2.12.0/tsparticles.updater.out-modes.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-size@2.12.0/tsparticles.updater.size.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-basic@2.12.0/tsparticles.basic.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-attract@2.12.0/tsparticles.interaction.external.attract.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-bounce@2.12.0/tsparticles.interaction.external.bounce.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-bubble@2.12.0/tsparticles.interaction.external.bubble.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-connect@2.12.0/tsparticles.interaction.external.connect.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-grab@2.12.0/tsparticles.interaction.external.grab.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-pause@2.12.0/tsparticles.interaction.external.pause.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-push@2.12.0/tsparticles.interaction.external.push.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-remove@2.12.0/tsparticles.interaction.external.remove.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-repulse@2.12.0/tsparticles.interaction.external.repulse.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-slow@2.12.0/tsparticles.interaction.external.slow.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-particles-attract@2.12.0/tsparticles.interaction.particles.attract.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-particles-collisions@2.12.0/tsparticles.interaction.particles.collisions.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-particles-links@2.12.0/tsparticles.interaction.particles.links.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-move-parallax@2.12.0/tsparticles.move.parallax.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-particles.js@2.12.0/tsparticles.pjs.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-image@2.12.0/tsparticles.shape.image.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-line@2.12.0/tsparticles.shape.line.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-polygon@2.12.0/tsparticles.shape.polygon.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-square@2.12.0/tsparticles.shape.square.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-star@2.12.0/tsparticles.shape.star.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-text@2.12.0/tsparticles.shape.text.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-destroy@2.12.0/tsparticles.updater.destroy.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-life@2.12.0/tsparticles.updater.life.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-rotate@2.12.0/tsparticles.updater.rotate.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-stroke-color@2.12.0/tsparticles.updater.stroke-color.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-slim@2.12.0/tsparticles.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-interaction-external-trail@2.12.0/tsparticles.interaction.external.trail.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-absorbers@2.12.0/tsparticles.plugin.absorbers.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-emitters@2.12.0/tsparticles.plugin.emitters.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-polygon-mask@2.12.0/tsparticles.plugin.polygon-mask.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-roll@2.12.0/tsparticles.updater.roll.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-tilt@2.12.0/tsparticles.updater.tilt.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-twinkle@2.12.0/tsparticles.updater.twinkle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-wobble@2.12.0/tsparticles.updater.wobble.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.12.0/tsparticles.min.js"></script>
         <script src="/js/404.min.js"></script>
     </body>
 </html>
