--- a/samples/presets/fireworks.html
+++ b/samples/presets/fireworks.html
@@ -145,22 +145,7 @@
             src="//cdn.carbonads.com/carbon.js?serve=CEAI6KJL&placement=particlesjsorg"
             id="_carbonads_js"
         ></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-engine@2.12.0/tsparticles.engine.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-basic@2.12.0/tsparticles.basic.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-move-base@2.12.0/tsparticles.move.base.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-emitters@2.12.0/tsparticles.plugin.emitters.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-plugin-sounds@2.12.0/tsparticles.plugin.sounds.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-circle@2.12.0/tsparticles.shape.circle.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-shape-line@2.12.0/tsparticles.shape.line.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-color@2.12.0/tsparticles.updater.color.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-destroy@2.12.0/tsparticles.updater.destroy.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-life@2.12.0/tsparticles.updater.life.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-opacity@2.12.0/tsparticles.updater.opacity.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-out-modes@2.12.0/tsparticles.updater.out-modes.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-rotate@2.12.0/tsparticles.updater.rotate.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-size@2.12.0/tsparticles.updater.size.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-updater-stroke-color@2.12.0/tsparticles.updater.stroke-color.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tsparticles-preset-fireworks@2.12.0/tsparticles.preset.fireworks.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@tsparticles/preset-fireworks@3.0.0/tsparticles.preset.fireworks.bundle.min.js"></script>
         <script type="text/javascript">
             (async () => {
                 await loadFireworksPreset(tsParticles);
