build: fix editor in small devices

--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
 
                 editor.top().right().theme("neu-dark");
 
-                const editorEl = document.querySelector("#m_tsparticles_editor");
+                const editorEl = document.getElementyById("m_Symbol(tsparticles)_editor");
 
                 editorEl.classList.add("d-md-block");
                 editorEl.classList.add("d-none");
